# fork-beat-books-data

./: .env.example  CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  Tables.sql  alembic.ini  pyproject.toml  requirements.txt  sample_urls.xlsx
.github/workflows/: claude-code-review.yml  claude.yml  lint.yml  security.yml  test.yml  type-check.yml
docs/: branch-protection.md  migrations.md
migrations/: 001_create_odds_table.sql  README.md  env.py
migrations/versions/: 001_add_performance_indexes.py  001_initial_schema_from_tables_sql.py
src/: main.py
src/core/: config.py  database.py  scraper_utils.py  scrapling_fetcher.py
src/dtos/: __init__.py  defense_stats_dto.py  games_dto.py  kicking_dto.py  kicking_stats_dto.py  odds_dto.py  passing_stats_dto.py  punting_dto.py  punting_stats_dto.py  receiving_stats_dto.py  return_stats_dto.py  returns_dto.py  rushing_stats_dto.py  scoring_stats_dto.py  scraped_data_dto.py  standings_dto.py  team_defense_dto.py  team_game_dto.py  team_offense_dto.py
src/entities/: __init__.py  defense_stats.py  games.py  kicking.py  kicking_stats.py  odds.py  passing_stats.py  punting.py  punting_stats.py  receiving_stats.py  return_stats.py  returns.py  rushing_stats.py  scoring_stats.py  scraped_data.py  standings.py  team_defense.py  team_game.py  team_offense.py
src/repositories/: __init__.py  base_repo.py  defense_stats_repo.py  games_repo.py  (+16 more)
tests/: conftest.py  test_create_sample_excel.py  test_excel_scraper.py  test_odds_repository.py  test_odds_service.py  test_scraper_utils.py  test_stats_retrieval_service.py
(+27 files in other folders)
