[project]
name = "beat-books-data"
version = "0.1.0"
description = "NFL data ingestion, storage, and retrieval service for the BeatTheBooks platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "BeatTheBooks Team" }
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "fastapi[all]",
    "pydantic",
    "pydantic[email]",
    "pydantic-settings",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "requests",
    "beautifulsoup4",
    "lxml",
    "aiohttp",
    "pandas",
    "selenium",
    "selenium-stealth",
    "webdriver-manager",
    "openpyxl",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "bandit",
    "types-requests",
    "types-beautifulsoup4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require network/DB)",
    "unit: marks tests as unit tests",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
